[tool.poetry]
name = "skrunk-feeds"
version = "0.1.0"
description = ""
authors = ["Zachary Westerman <westerman.zachary@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
